--- a/src/app/administrator/side-menu/side-menu.component.html
+++ b/src/app/administrator/side-menu/side-menu.component.html
@@ -1,9 +1,10 @@
 <div class="container-fluid">
   <div class="company-logo">
-    <img>
+    <img class="icon">
   </div>
   <ul>
     <li routerLink="dashboard" routerLinkActive="active"><img class="dashboard">Dashboard</li>
     <li routerLink="sales" routerLinkActive="active"><img class="sales">Sales</li>
+    <li routerLink="maps" routerLinkActive="active"><img class="maps">Maps</li>
   </ul>
 </div>
